--- a/nzsa2017/assets/css/sass/graphs/_map.sass
+++ b/nzsa2017/assets/css/sass/graphs/_map.sass
@@ -46,13 +46,16 @@
     // stroke: magenta
     stroke-width: 3
 
-  .busIcon
-    height: 18px
+  // .busIcon
+  //   height: 18px
+  //   width: 18px
 
-  .busIcon-small
-    height: 8px
+  // .busIcon-small
+  //   height: 8px
+  //   width: 8px
 
-  .busIcon-large
-    height: 25px
+  // .busIcon-large
+  //   height: 25px
+  //   width: 25px
 
   
